updated to Spring Boot 3, Java 22